# re_ddns

./: .dockerignore  .gitignore  Dockerfile  README.md  START_BUILD_TEST_GUIDE.md  START_BUILD_TEST_GUIDE_ZH.md  docker-compose.test.yml  docker-compose.yml  macos_set_dns.sh  plan.md  pyproject.toml  requirements.txt  rxconfig.py
docker/: entrypoint.sh  generate_tsig_key.sh  named.conf  named.conf.local  named.conf.local.template  rndc.conf
docker/zones/: db.example.com  db.reflex-ddns.com.external.template  db.reflex-ddns.com.internal.template  db.reflex-ddns.com.template
re_ddns/: re_ddns.py
re_ddns/api/: cert_manager.py  dns_api.py  dns_manager.py  nginx_manager.py  registry.py  registry_api.py
re_ddns/components/: ca_guide.py  config_form.py  sidebar.py
re_ddns/states/: activity_log_state.py  config.py  dns_update_state.py  ip_state.py  ui.py
testapp/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  register_dns.py  rxconfig.py
testapp/testapp/: testapp.py
testapp2/: Dockerfile  README.md  entrypoint.sh  fluxbox-menu  pyproject.toml  register_dns.py  rxconfig.py  supervisord.conf
testapp2/testapp2/: testapp2.py
testapp3/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  register_dns.py  rxconfig.py
testapp3/testapp3/: testapp3.py
