[project]
name = "testapp2"
version = "0.1.0"
description = "Reflex test app with in-container browser (Chromium + noVNC) for CA/HTTPS testing"
requires-python = "~=3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
reflex = "0.8.24.post1"
httpx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
